--- a/client/styles/gameCard.css
+++ b/client/styles/gameCard.css
@@ -150,14 +150,17 @@
 }
 
 .game_card-skill_list .card_list_item_black .roster_description .roster_abil_desc {
-  padding-right: 4%;
-  font-size: 95%;
-  font-weight: 400;
-  line-height: 1.25;
-  letter-spacing: -.06vw;
   height: auto;
   width: 129%;
   position: relative;
+  z-index: 1;
+  padding-right: 4%;
+  padding-top: 14%;
+  color: #301919;
+  font-weight: 900;
+  font-size: 95%;
+  line-height: 1.25;
+  letter-spacing: -.06vw;
 }
 
 .game_card-skill_list .card_list_item_black .roster_abil_stats {
@@ -284,14 +287,17 @@
 }
 
 .game_card-skill_list .card_list_item_white .roster_description .roster_abil_desc {
-  padding-right: 4%;
-  font-size: 95%;
-  font-weight: 400;
-  line-height: 1.25;
-  letter-spacing: -.06vw;
   height: auto;
   width: 129%;
   position: relative;
+  z-index: 1;
+  padding-right: 4%;
+  padding-top: 14%;
+  color: #301919;
+  font-weight: 900;
+  font-size: 95%;
+  line-height: 1.25;
+  letter-spacing: -.06vw;
 }
 
 .game_card-skill_list .card_list_item_white .roster_abil_stats {
@@ -839,6 +845,45 @@
   transform: rotate(180deg);
 }
 
+.img_cogs_black.left .gameCard_name, .img_cogs_white.left .gameCard_name {
+  transform: rotate(-180deg);
+}
+
 .img_cogs_black.right, .img_cogs_whire.right {
-  transform: rotate(270deg);
+  transform: rotate(180deg);
+}
+
+.img_cogs_black.right .gameCard_name, .img_cogs_whire.right .gameCard_name {
+  transform: rotate(-180deg);
+}
+
+#dummy_contain {
+  width: 1%;
+  height: 1%;
+  position: relative;
+  top: -94%;
+  z-index: -1;
+}
+
+#dummy_contain .mini-card-actions {
+  justify-content: space-evenly;
+}
+
+#dummy_contain.right {
+  left: -220%;
+}
+
+#dummy_contain.left {
+  left: 70%;
+}
+
+.mini-card-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  position: relative;
+  width: 10000%;
+  height: 10000%;
 }
